--- a/exam_reminder/exam_board/templates/exam_board/base.html
+++ b/exam_reminder/exam_board/templates/exam_board/base.html
@@ -17,12 +17,16 @@
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
   </head>
   <body>
+
     <main class="container">
+        {% block content %}
         <div class="bg-dark p-5 rounded">
-                {% block content %}siema
-                {% endblock %}
+                siema
+
         </div>
+        {% endblock %}
     </main>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
