--- a/exam_reminder/exam_board/templates/exam_board/board.html
+++ b/exam_reminder/exam_board/templates/exam_board/board.html
@@ -16,6 +16,7 @@
             <dd class="col-sm-9">{{ exam.date|date:"d M Y, H:m" }}</dd>
             <dd class="col-sm-9"><em>{{ exam.description }}</em></dd>
         </dl>
+            <a class="btn btn-success" href='{% url 'exam' exam.id %}'>edit</a>
         </div>
         <br>
     {% endfor %}
