--- a/exam_reminder/exam_board/templates/exam_board/board.html
+++ b/exam_reminder/exam_board/templates/exam_board/board.html
@@ -1,4 +1,5 @@
 {% extends 'exam_board/base.html' %}
+{% load crispy_forms_filters %}
 
 {% block content %}
 <br>
@@ -26,4 +27,13 @@
         <a class="btn btn-primary" href='{% url 'past_board' %}'>See past exams</a>
     </div>
 {% endif %}
+<br>
+<div class="bg-dark p-4 rounded">
+    <h3>Add new exam:</h3>
+    <form action="" method="POST">
+        {%  csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 {% endblock %}
