--- a/exam_reminder/exam_board/templates/exam_board/base.html
+++ b/exam_reminder/exam_board/templates/exam_board/base.html
@@ -16,17 +16,36 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
   </head>
+  <nav class="navbar navbar-expand-lg" style="background-color: #24bc95;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://github.com/D-Mielewczyk/exam-reminder">Exam reminder</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="/">Current exams</a>
+        <a class="nav-link active" aria-current="page" href="/past">Past exams</a>
+      </div>
+    </div>
+  </div>
+  </nav>
   <body>
 
     <main class="container">
         {% block content %}
-        <div class="bg-dark p-5 rounded">
-                siema
-
-        </div>
         {% endblock %}
     </main>
 
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <span class="mb-3 mb-md-0 text-muted">2023 D-Mielewczyk</span>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="https://icons8.com" target="_blank"><img src="{% static 'icons8-icons8-96.png' %}" alt="icons8" style="width:30px;height:30px;"></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://github.com/D-Mielewczyk" target="_blank"><img src="{% static 'icons8-github-96.png' %}" alt="github" style="width:30px;height:30px;"></a></li>
+        </ul>
+    </footer>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
